[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/sprites/objects/dialog_box_big.png" type="Texture" id=1]
[ext_resource path="res://assets/Pokemon Classic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/ui/next.png" type="Texture" id=3]
[ext_resource path="res://assets/objects/cutscene_dialog.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/fall_sfx.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/vocal_constanent.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/vocal_vowel.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/vocal_o.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 672, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 864, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 1056, 0, 96, 64 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "dialog",
"speed": 5.0
} ]

[sub_resource type="Animation" id=14]
resource_name = "dialog"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 11 ]
}

[sub_resource type="DynamicFont" id=15]
size = 5
extra_spacing_bottom = -4
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 15 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 15 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 15, 16, 15 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 15 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="cutscene_dialog" type="Node2D"]
position = Vector2( 64, -40 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "dialog"
frame = 6

[node name="dialog_anim" type="AnimationPlayer" parent="."]
autoplay = "dialog"
anims/dialog = SubResource( 14 )

[node name="text" type="Label" parent="."]
margin_left = -42.4108
margin_top = -28.2649
margin_right = 45.5892
margin_bottom = 16.7351
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You did a mighty fine job, helping me aquire that thing and all... There's a fellow in need of work, but I'm warning ya."
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="AnimatedSprite" parent="."]
position = Vector2( 34.9628, 26.7733 )
frames = SubResource( 20 )
frame = 2
playing = true

[node name="dialog_open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -11.107

[node name="vocal_c" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="vocal_e" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="vocal_o" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
